chore: fix some findings